[package]
name = "lingyue"
version = "0.1.0"
authors = ["Ling Lin <taellinglin@gmail.com>"]

[dependencies]
rtaudio = "0.2.1"
eframe = "0.22.0"
egui = "0.22.0"

# If your project needs a specific version of the Rust compiler
[package.metadata.rust]
channel = "1.50.0"

[build-dependencies]
# If your build requires some additional crates, please specify them here. 
