[package]
name = "lingyue"
version = "0.1.0"
authors = ["Ling Lin <taellinglin@gmail.com>"]

[dependencies]
rtaudio = "0.2.1"
eframe = "0.22.0"
egui = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9"

[dependencies.egui_tiles]
version = "0.1.0"

[dependencies.pcg_rand]
version = "0.9.0"
